# APEX

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  api.py  app.js  brain.py  calendar_client.py  config.json  config.py  database.py  email_client.py  gmail_client.py  google_auth.py  gui.py  index.html  launch_apex.bat  launcher.py  main.py  news_client.py  pyproject.toml  requirements.txt  scanner.py  speaker.py  sports.py  sports_client.py  style.css  weather.py  weather_client.py
clients/: calendar_client.py  gmail_client.py  market_client.py  news_client.py  sports_client.py  weather_client.py
core/: api.py  brain.py  config.py  database.py  runtime_logging.py  scanner.py  speaker.py
docs/: api.md  architecture.md  decisions.md  design-system.md  privacy.md  roadmap.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend_new/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
legacy/: gui.py
scripts/: smoke_comet_thinking.py  smoke_local_synthesis.py
tests/: __init__.py  test_activation_telemetry.py  test_api_characterization.py  test_api_router_compatibility.py  test_briefing_delivery.py  test_capability_registry.py  test_database_history.py  test_gemini_provider.py  test_independent_overview_backend.py  test_launcher.py  test_provider_configuration.py  test_runtime_hardening.py  test_runtime_modes.py  test_settings_api.py  test_settings_runtime.py  test_settings_store.py  test_synthesis.py  (+1 more)
(+161 files in other folders)
